# bevy-react

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  SETUP.md  TODO  app.js  demos.d.ts  demos.js  demos_bg.wasm.d.ts  eslint.config.mjs  package-lock.json  package.json  vendor.js
.cargo/: config.toml
.github/workflows/: ci.yml
animations/: Cargo.toml
animations/src/: lib.rs  protocol.rs
assets/shaders/: crt.wgsl
crates/animations/: Cargo.toml
crates/animations/src/: lib.rs  protocol.rs  runner.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: color.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: anchor.rs  bridge.rs  cursor.rs  event.rs  filter.rs  filter.wgsl  js_thread.rs  keyboard.rs  lib.rs  message.rs  plugin.rs  protocol.rs  reconcile.rs  registry.rs  request.rs  scroll.rs  transition.rs  ts_codegen.rs  ui_map.rs
crates/core/src/host/: mod.rs  native.rs  web.rs
crates/core/tests/: animations.rs  broken_reload.rs  demo_switch.rs  hot_reload.rs  roundtrip.rs  timers.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/portal/: Cargo.toml
crates/portal/src/: lib.rs
crates/surface/: Cargo.toml
crates/surface/src/: lib.rs
docs/plans/: 2026-06-27-benchmarks-design.md
examples/counter/: main.rs
examples/counter/ui/: package.json
examples/counter/ui/src/: App.tsx  generated.ts
examples/demos/: README.md  anchored.rs  animations.rs  basic_ui.rs  bouncing_ball.rs  camera.rs  events.rs  main.rs  request_response.rs  scene.rs  scenes.rs  screenshot.rs  shared.rs
examples/demos/scenes/: bouncing_ball.rs  crowded_cubes.rs  cubes.rs  monitor.rs
examples/demos/ui/: build-web.mjs  build.mjs  index.html  package.json  tsconfig.json
examples/demos/ui/src/: App.tsx  Navigation.tsx  bevy.ts  demos.ts  generated.ts  index.tsx  store.ts  theme.ts
examples/demos/ui/src/components/: Button.tsx  Card.tsx  Checkbox.tsx  Example.tsx  ProgressBar.tsx  Radio.tsx  Slider.tsx  TextMono.tsx  Typewriter.tsx  index.tsx
examples/demos/ui/src/demos/: AnchoredDemo.tsx  AnimationsDemo.tsx  BasicUiDemo.tsx  BouncingBallsAnimationDemo.tsx  ButtonDemo.tsx  CanvasDemo.tsx  EditableTextDemo.tsx  EventsDemo.tsx  FadeAnimationDemo.tsx  Home.tsx  ImageDemo.tsx  InteractionsDemo.tsx  NodeDemo.tsx  PollingDataDemo.tsx  RequestResponseDemo.tsx  ScrollDemo.tsx  TextDemo.tsx  TransitionDemo.tsx  styles.ts
examples/demos/ui/src/demos/animations/: BouncingBallsAnimationDemo.tsx  EasingDemo.tsx  FadeAnimationDemo.tsx  InterpolateDemo.tsx  LayoutAnimationDemo.tsx  SequenceDemo.tsx  SpinDemo.tsx  SpringDemo.tsx  TransitionDemo.tsx  shared.ts
examples/demos/ui/src/demos/communication/: BevyToReactDemo.tsx  BidirectionCommunicationDemo.tsx  ReactToBevyDemo.tsx
examples/demos/ui/src/demos/elements/: ButtonDemo.tsx  CanvasDemo.tsx  EditableTextDemo.tsx  ImageDemo.tsx  NodeDemo.tsx  PortalDemo.tsx  TextDemo.tsx
examples/demos/ui/src/demos/elements/surfaceDemo/: AboutDialog.tsx  BootScreen.tsx  CodeViewer.tsx  Desktop.tsx  Home.tsx  MenuBar.tsx  MonitorApp.tsx  Taskbar.tsx  index.tsx  menu.tsx  source.ts
examples/demos/ui/src/demos/interactions/: KeyboardDemo.tsx  MouseDemo.tsx
examples/demos/ui/src/demos/layout/: FlexDemo.tsx  GridDemo.tsx  ScrollDemo.tsx
examples/demos/ui/src/demos/styling/: BordersDemo.tsx  ColorsDemo.tsx  CursorDemo.tsx  FilterDemo.tsx  FocusPolicyDemo.tsx  GradientsDemo.tsx  OpacityDemo.tsx  OverflowDemo.tsx  ShadowDemo.tsx  SizingDemo.tsx  SpacingDemo.tsx  TransformDemo.tsx  UnitsDemo.tsx  ZIndexDemo.tsx  shared.ts
examples/minimal/: main.rs
examples/minimal/ui/: package.json
examples/minimal/ui/src/: App.tsx  bevy.ts  index.tsx
examples/stress/: README.md  krausest.rs  main.rs  table_ops.rs
examples/stress/ui/: build.mjs  package.json
examples/stress/ui/src/: App.tsx  bevy.ts  data.ts  index.tsx
js/: build-lib.mjs  package-lock.json  package.json  tsconfig.json
js/src/: anchored.ts  animated.ts  app.tsx  bridge.ts  canvas.ts  hmr.ts  index.ts  index.tsx  jsx-dev-runtime.ts  jsx-runtime.ts  jsx.d.ts  mount.ts  react-refresh.d.ts  renderer.ts
js/templates/ui/: build.mjs  package.json
js/templates/ui/src/: bevy.ts
js/test/: bridge.test.mjs
macros/: Cargo.toml
src/: anchor.rs  bridge.rs  canvas.rs  event.rs  js_thread.rs  lib.rs  main.rs  message.rs  plugin.rs  protocol.rs  reconcile.rs  ui_map.rs
tests/: demo_switch.rs  roundtrip.rs  timers.rs
