[workspace]
resolver = "3"
members = ["crates/core", "crates/canvas", "crates/animations", "crates/macros"]
default-members = ["crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
bevy = "0.19"
crossbeam-channel = "0.5.15"
deno_core = "0.404.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny-skia = "0.11"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync"] }
ts-rs = "10"
proc-macro2 = "1"
quote = "1"
syn = "2"

bevy-react-animations = { path = "crates/animations" }
bevy-react-canvas = { path = "crates/canvas" }
bevy-react-macros = { path = "crates/macros" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
