[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/canvas",
    "crates/animations",
    "crates/macros",
    "crates/portal",
    "crates/surface",
]
default-members = ["crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mateusz Tomczyk <mateusz.tomczyk.tul@gmail.com>"]
repository = "https://github.com/tulustul/bevy-react"
homepage = "https://github.com/tulustul/bevy-react"

[workspace.dependencies]
accesskit = "0.24"
anyhow = "1.0.102"
bevy = { version = "0.19", features = ["system_clipboard", "custom_cursor"] }
crossbeam-channel = "0.5.15"
deno_core = "0.404.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny-skia = "0.11"
tracing = "0.1"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync"] }
ts-rs = "10"
uuid = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"

# Web (wasm32) host dependencies — see `crates/core/src/host/web.rs`.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = "0.3"

bevy-react-animations = { path = "crates/animations" }
bevy-react-canvas = { path = "crates/canvas" }
bevy-react-macros = { path = "crates/macros" }
bevy-react-portal = { path = "crates/portal" }
bevy-react-surface = { path = "crates/surface" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
