[package]
name = "bevy-react-animations"
version.workspace = true
edition.workspace = true
description = "Reanimated-style animation engine for bevy-react."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["bevy", "react", "animation", "ui", "gamedev"]
categories = ["gui", "game-development"]

[lib]
name = "bevy_react_animations"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
