[package]
name = "bevy-react-animations"
version.workspace = true
edition.workspace = true
description = "Reanimated-style animation engine for bevy-react."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["bevy", "react", "animation", "ui", "gamedev"]
categories = ["gui", "game-development"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bevy_react_animations"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
