[package]
name = "bevy-react-canvas"
version.workspace = true
edition.workspace = true
description = "Canvas / rasterizer host element for bevy-react (tiny-skia)."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["bevy", "react", "canvas", "ui", "gamedev"]
categories = ["gui", "game-development"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bevy_react_canvas"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
tiny-skia = { workspace = true }
