[package]
name = "bevy-react"
version.workspace = true
edition.workspace = true
description = "Drive bevy_ui from a React app over an embedded V8 runtime."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["bevy", "react", "ui", "gamedev", "gui"]
categories = ["gui", "game-development"]

[lib]
name = "bevy_react"
path = "src/lib.rs"

# The example and its React UI live at the repo root (`examples/`), so declare it
# explicitly rather than relying on the default `examples/` directory lookup.
[[example]]
name = "demos"
path = "../../examples/demos/main.rs"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
bevy-react-animations = { workspace = true }
bevy-react-canvas = { workspace = true }
bevy-react-macros = { workspace = true }
crossbeam-channel = { workspace = true }
deno_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
