[package]
name = "bevy-react-macros"
version.workspace = true
edition.workspace = true
description = "Proc-macros for bevy-react's typed React<->Bevy messaging."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["bevy", "react", "macros", "codegen"]
categories = ["gui", "game-development"]

[lib]
name = "bevy_react_macros"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
